--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "starting_code",
   "version": "1.0.0",
-  "description": "",
+  "description": "This full stack app boilerplate consists of:",
   "main": "index.js",
   "scripts": {
     "postinstall": "npm run client:build",
@@ -48,5 +48,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/2112-ftb-grace-shopper-BRVV/grace-shopper.git"
+  },
+  "bugs": {
+    "url": "https://github.com/2112-ftb-grace-shopper-BRVV/grace-shopper/issues"
+  },
+  "homepage": "https://github.com/2112-ftb-grace-shopper-BRVV/grace-shopper#readme"
 }
