--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-dom": "^16.13.1",
     "react-ranger": "^2.1.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "nodemon": "^2.0.16",
